@@ -1,7 +1,7 @@
 ---
 title: pantcl4r - Tutorial
 author: Detlef Groth, University of Potsdam
-date: 2024-11-13 09:16
+date: 2024-11-13 14:34
 bibliography: ref.bib
 pipe:
     pipe: R
@@ -158,6 +158,14 @@ HTML. Here the result:
 df2md(head(iris))
 ```
 
+## Lorem Lipsum 
+
+Sometimes we whould like to add some place holder text like Lorem  Lipsum. You
+can do this by writing:
+
+`r cat(lipsum(paragraphs=2))`
+
+## In Text R Expressions
 
 Last but not  least, often  you like to inline  R-expressions  in your text to
 display results of R commands directly within your text.
