@@ -9,3 +9,4 @@
 ## 2024-11-XX Version 0.4.1
 
 - extending vignette with Reference, Python and backtick examples
+- adding lipsum function
